# PixNerd-diffusers

./: .gitignore  README.md  README_DIFFUSERS.md  app.py  main.py  pyproject.toml  requirements.txt
scripts/: convert_pixnerd_ckpt_to_diffusers.py  convert_raw_imagenet_ckpts.py  sample_pixnerd.py
src/diffusers/: __init__.py  _hf_utils.py
src/diffusers/models/: __init__.py
src/diffusers/models/autoencoders/: __init__.py  autoencoder_pixel.py
src/diffusers/models/conditioners/: __init__.py  conditioner_pixnerd.py
src/diffusers/models/transformers/: __init__.py  transformer_pixnerd.py
src/diffusers/pipelines/: __init__.py
src/diffusers/pipelines/pixnerd/: __init__.py  pipeline_pixnerd.py
src/diffusers/schedulers/: __init__.py  scheduling_flow_match_pixnerd.py
src/models/conditioner/: base.py  class_label.py
src/pixnerd_diffusers/: __init__.py  config_utils.py  model_wrapper.py  pipeline.py  scheduler.py  training.py  transformer.py
src/pixnerd_diffusers/models/: __init__.py  modeling_pixnerd_transformer_2d.py
src/pixnerd_diffusers/pipelines/: __init__.py  pipeline_pixnerd.py
src/pixnerd_diffusers/schedulers/: __init__.py  scheduling_pixnerd_flow_match.py
