[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusers-pixnerd"
version = "0.1.0"
description = "Diffusers-style PixNerd (Pixel Neural Field Diffusion) components."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "diffusers>=0.30.0",
    "torch",
    "safetensors",
    "transformers",
    "torchvision",
    "timm",
    "gradio",
    "Pillow",
]

[tool.setuptools.packages.find]
where = ["src"]
